iida-ke/kustomize/base/developer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service
            port:
              name: http
